Fixed line numbers not showing in xed
If line numbers are still not visible, then move /usr/share/gtksourceview-4/styles/xed.xml to /usr/share/gtksourceview-4/styles/xed.xml.bkup

--- a/BlackMagic/gtk-3.0/gtk.css
+++ b/BlackMagic/gtk-3.0/gtk.css
@@ -3835,6 +3835,13 @@ menuitem radio:hover
   border-width: 0 1px 1px 1px;
   border-style: solid; }
 
+.line-numbers {
+    background-color: #161616 !important;
+    color: #ffffff !important;
+    opacity: 1 !important;
+    padding-right: 10px;
+}
+
 /**********
  * Thunar *
  **********/
